--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "dependencies": {
     "@observablehq/framework": "^1.10.1",
     "d3-dsv": "^3.0.1",
-    "d3-time-format": "^4.1.0",
-    "google-auth-library": "^9.14.0",
-    "google-spreadsheet": "^4.1.3"
+    "d3-time-format": "^4.1.0"
   },
   "devDependencies": {
     "rimraf": "^5.0.5"
