--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@observablehq/framework": "^1.10.1",
+    "d3": "^7.9.0",
     "d3-dsv": "^3.0.1",
+    "d3-sankey": "^0.12.3",
     "d3-time-format": "^4.1.0"
   },
   "devDependencies": {
